<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/addEntertainmentConstraintLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.socialteinc.socialate.AddEntertainmentActivity">

    <include
            layout="@layout/app_bar_layout"
            android:id="@+id/ViewAddedAreaToolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/scrollView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ViewAddedAreaToolbar"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:text="@string/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/addEntertainmentAreaButton"
                    android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                    android:background="@color/colorPrimary" android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                    android:text="@string/add_new_entertainment_area"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.08"/>
            <ImageView android:layout_width="0dp"
                       android:layout_height="246dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginLeft="8dp"
                       android:layout_marginRight="8dp"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="16dp"
                       android:adjustViewBounds="true"
                       android:cropToPadding="true"
                       android:src="@drawable/eventplaceholder"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintHorizontal_bias="0.0"
                       android:id="@+id/EntertainmentImageView"
                       android:contentDescription="@string/picture_of_area"
                       app:layout_constraintTop_toBottomOf="@+id/textView" android:scaleType="fitCenter"/>
            <Button
                    android:text="@string/choose_picture"
                    android:layout_width="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_height="wrap_content" android:id="@+id/chooseImageButton"
                    android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/EntertainmentImageView"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="8dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImageButton" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:id="@+id/entertainmentTitleTextInputLayout">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_of_place" android:inputType="text"
                        android:selectAllOnFocus="false" android:id="@+id/entertainmentTitleEditText"
                        android:textColor="@color/colorPrimaryText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/entertainmentTitleTextInputLayout" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" android:id="@+id/textInputLayout2" android:layout_marginTop="16dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_of_owner_optional" android:id="@+id/NameOfOwnerEditText"
                        android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:id="@+id/textInputLayout3"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="16dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/physical_address" android:id="@+id/entertainmentAddressEditText"
                        android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" android:id="@+id/textInputLayout4"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="16dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:id="@+id/entertainmentDescrptionEditText" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
