...
                    app:layout_constraintLeft_toLeftOf="parent" android:id="@+id/textInputLayout3"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="16dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/display_name" android:id="@+id/displayNameEditText"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:id="@+id/fullNameEditText"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                    android:id="@+id/setupSubmitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
