<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/registerEmailConstraintLayout"
        tools:context="com.socialteinc.socialate.RegisterEmailActivity">

    <include
            layout="@layout/app_bar_layout"
            android:id="@+id/registerEmailToolbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/create_account"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="14dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextInputLayout" />

    <TextView
            android:id="@+id/createPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailToolbar"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/createPasswordTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.0">

        <EditText
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address" android:id="@+id/loginEmailEditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerPasswordTextInputLayout" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:clickable="true"
                android:hint="@string/password" android:id="@+id/loginPasswordEditText"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
